# BananaSDK

./: .gitignore  CMakeLists.txt  README.md  build.gradle  index.html  key.txt  key.txt.pub  settings.gradle
.github/workflows/: build.yml
TestWeb/: app.tsx  authtics-host.config.ts  index.ts  package-lock.json  package.json  test.tsx
Web/: BananaSDK.js  BananaSDK.ts  Button.tsx
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: main.cpp
app/src/main/java/com/bananasdk/app/: MainActivity.java
include/BananaSDK/: Android.h  AndroidApp.h  AndroidAppDev.h  Box.h  Button.h  CheckBox.h  CircleProgress.h  ContextMenu.h  Dropdown.h  InputField.h  Log.h  MultiDropdown.h  PopupMenu.h  Progress.h  RadioGroup.h  Renderer.h  ScrollBox.h  Text.h  Textarea.h  UI.h  UIElements.h
include/src/: AndroidApp.cpp  AndroidAppDev.cpp  Box.cpp  Button.cpp  CheckBox.cpp  CircleProgress.cpp  ContextMenu.cpp  Dropdown.cpp  InputField.cpp  JNIBridge.cpp  MultiDropdown.cpp  PopupMenu.cpp  Progress.cpp  RadioGroup.cpp  Renderer.cpp  ScrollBox.cpp  Text.cpp  Textarea.cpp  UI.cpp
